--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
     <properties>
         <javaservlet.version>3.1.0</javaservlet.version>
         <spring.version>4.2.5.RELEASE</spring.version>
+        <glassfish.home>/opt/glassfish4</glassfish.home>
+        <java.version>1.8</java.version>
+        <jdk.version>1.8</jdk.version>
     </properties>
 
     <dependencies>
@@ -76,6 +79,31 @@
                     <version>2.1.1</version>
                     <configuration>
                         <failOnMissingWebXml>false</failOnMissingWebXml>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.glassfish.maven.plugin</groupId>
+                    <artifactId>maven-glassfish-plugin</artifactId>
+                    <version>2.1</version>
+                    <configuration>
+                        <glassfishDirectory>${glassfish.home}/glassfish</glassfishDirectory>
+                        <user>admin</user>
+                        <passwordFile>${glassfish.home}/config/password.txt</passwordFile>
+                        <debug>true</debug>
+                        <terse>false</terse>
+                        <echo>true</echo>
+                        <domain>
+                            <name>domain1</name>
+                            <adminPort>4848</adminPort>
+                            <httpPort>8080</httpPort>
+                        </domain>
+                        <components>
+                            <component>
+                                <name>${project.artifactId}</name>
+                                <artifact>target/${project.build.finalName}.war</artifact>
+                            </component>
+                        </components>
                     </configuration>
                 </plugin>
             </plugins>
